Yet another attempt at getting platform independent property loading.